tests/ui/impl-trait/in-trait/opaque-and-lifetime-mismatch.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/opaque-and-lifetime-mismatch.rs:4:24
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                        ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
LL |     fn bar() -> Wrapper<'static, impl Sized>;
   |                         ++++++++

error[E0106]: missing lifetime specifier
  --> $DIR/opaque-and-lifetime-mismatch.rs:18:24
   |
LL |     fn foo() -> Wrapper<impl Sized>;
   |                        ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
LL |     fn foo() -> Wrapper<'static, impl Sized>;
   |                         ++++++++

error[E0106]: missing lifetime specifier
  --> $DIR/opaque-and-lifetime-mismatch.rs:24:24
   |
LL |     fn foo() -> Wrapper<impl Sized> {
   |                        ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`, or if you will only have owned values
   |
LL |     fn foo() -> Wrapper<'static, impl Sized> {
   |                         ++++++++

error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/opaque-and-lifetime-mismatch.rs:4:17
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                 ^^^^^^^ ---------- help: remove the unnecessary generic argument
   |                 |
   |                 expected 0 generic arguments
   |
note: struct defined here, with 0 generic parameters
  --> $DIR/opaque-and-lifetime-mismatch.rs:1:8
   |
LL | struct Wrapper<'rom>(&'rom ());
   |        ^^^^^^^

error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/opaque-and-lifetime-mismatch.rs:18:17
   |
LL |     fn foo() -> Wrapper<impl Sized>;
   |                 ^^^^^^^ ---------- help: remove the unnecessary generic argument
   |                 |
   |                 expected 0 generic arguments
   |
note: struct defined here, with 0 generic parameters
  --> $DIR/opaque-and-lifetime-mismatch.rs:1:8
   |
LL | struct Wrapper<'rom>(&'rom ());
   |        ^^^^^^^

error[E0053]: method `bar` has an incompatible return type for trait
  --> $DIR/opaque-and-lifetime-mismatch.rs:10:17
   |
LL |     fn bar() -> i32 {
   |                 ^^^
   |                 |
   |                 expected `Wrapper<'static>`, found `i32`
   |                 return type in trait

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/opaque-and-lifetime-mismatch.rs:10:17
   |
LL |     fn bar() -> i32 {
   |                 ^^^ expected `Wrapper<'static>`, found `i32`
   |
note: type in trait
  --> $DIR/opaque-and-lifetime-mismatch.rs:4:17
   |
LL |     fn bar() -> Wrapper<impl Sized>;
   |                 ^^^^^^^^^^^^^^^^^^^
   = note: expected signature `fn() -> Wrapper<'static>`
              found signature `fn() -> i32`
help: change the output type to match the trait
   |
LL |     fn bar() -> Wrapper<'static> {
   |                 ~~~~~~~~~~~~~~~~

error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/opaque-and-lifetime-mismatch.rs:24:17
   |
LL |     fn foo() -> Wrapper<impl Sized> {
   |                 ^^^^^^^ ---------- help: remove the unnecessary generic argument
   |                 |
   |                 expected 0 generic arguments
   |
note: struct defined here, with 0 generic parameters
  --> $DIR/opaque-and-lifetime-mismatch.rs:1:8
   |
LL | struct Wrapper<'rom>(&'rom ());
   |        ^^^^^^^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0053, E0106, E0107.
For more information about an error, try `rustc --explain E0053`.
